<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ma_infos"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_margin="8dp"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/contentDescription"
            android:layerType="software"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/line"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/ma_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="9">

                <ImageView
                    android:id="@+id/ma_avatar"
                    android:contentDescription="@string/contentDescription"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:srcCompat="@tools:sample/avatars[11]"
                    android:layout_weight="3"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:layout_weight="6">

                    <TextView
                        android:id="@+id/ma_detail_firstname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/firstname"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/ma_detail_lastname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lastname"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/ma_detail_mnr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mnr"
                        android:textSize="20sp"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/pers_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ma_header"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="5dp"
                    android:text="@string/pers_info"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/versicherungsnummer"
                        android:textSize="18sp"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/ma_detail_versnr"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/vers_nr"
                        android:textSize="18sp"
                        android:layout_weight="5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/geschlecht"
                        android:textSize="18sp"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/ma_detail_gender"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"
                        android:textSize="18sp"
                        android:layout_weight="5"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/geburtsdatum"
                        android:textSize="18sp"
                        android:layout_weight="5"/>

                    <TextView
                        android:id="@+id/ma_detail_birthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/birthday"
                        android:textSize="18sp"
                        android:layout_weight="5"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pers_info_container"
                android:layout_marginTop="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/anschrift"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:id="@+id/ma_detail_street"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/street"
                    android:textSize="18sp"
                    android:layout_weight="6"/>

                <TextView
                    android:id="@+id/ma_detail_hausnr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/haus_nr"
                    android:textSize="18sp"
                    android:layout_weight="3"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="9">

                <TextView
                    android:id="@+id/ma_detail_plz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/plz"
                    android:textSize="18sp"
                    android:layout_weight="3"/>

                <TextView
                    android:id="@+id/ma_detail_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textSize="18sp"
                    android:layout_weight="6"/>

            </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</ScrollView>