<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/book_view_linLay"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:weightSum="9">

    <ImageView
        android:id="@+id/book_view_pic"
        android:layout_width="10dp"
        android:layout_height="100dp"
        android:layout_weight="2"
        android:contentDescription="@string/contentDescription"
        app:srcCompat="@drawable/books_icon"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_weight="7">

        <TextView
            android:id="@+id/book_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:maxLength="100"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/book_view_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>